log

Thu 14 Mar 2024 08:37:03 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: variable ‘mayor’ set but not used [-Werror=unused-but-set-variable]
   14 |   int mayor;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
37d2231
Thu 14 Mar 2024 08:37:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: variable ‘mayor’ set but not used [-Werror=unused-but-set-variable]
   14 |   int mayor = 0;
      |       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0048365
